--- a/resources/spa/package.json
+++ b/resources/spa/package.json
@@ -32,7 +32,8 @@
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "weixin-js-sdk": "^1.3.3"
+    "weixin-js-sdk": "^1.3.3",
+    "xss": "^1.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
